--- a/index.html
+++ b/index.html
@@ -1,92 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <link rel="stylesheet" href="./style.css"/>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
-
-
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
-    <link rel="stylesheet" href="css/style.css">
 
+    <title>Rock paper and scissors</title>
 </head>
 <body>
-<div class="container">
-    <div id="game">
-        <form>
-
-            <input type="radio" id="rock-rock" name="rock-paper-scissors">
-            <input type="radio" id="rock-paper" name="rock-paper-scissors">
-            <input type="radio" id="rock-scissors" name="rock-paper-scissors">
-            <input type="radio" id="paper-rock" name="rock-paper-scissors">
-            <input type="radio" id="paper-paper" name="rock-paper-scissors">
-            <input type="radio" id="paper-scissors" name="rock-paper-scissors">
-            <input type="radio" id="scissors-rock" name="rock-paper-scissors">
-            <input type="radio" id="scissors-paper" name="rock-paper-scissors">
-            <input type="radio" id="scissors-scissors" name="rock-paper-scissors">
-
-            <div>
-                <h1>VisionRPS</h1>
-                <div id="hands">
-                    <div class="hand" id="computer-hand">
-                        <div class="fist"></div>
-                        <div class="finger finger-1"></div>
-                        <div class="finger finger-2"></div>
-                        <div class="finger finger-3"></div>
-                        <div class="finger finger-4"></div>
-                        <div class="thumb"></div>
-                        <div class="arm"></div>
-                    </div>
-
-                    <div class="hand" id="user-hand">
-                        <div class="fist"></div>
-                        <div class="finger finger-1"></div>
-                        <div class="finger finger-2"></div>
-                        <div class="finger finger-3"></div>
-                        <div class="finger finger-4"></div>
-                        <div class="thumb"></div>
-                        <div class="arm"></div>
-                    </div>
-
-                    <div id="icons">
-                        <div>
-                            <label for="rock-rock">✊</label>
-                            <label for="paper-rock">✊</label>
-                            <label for="scissors-rock">✊</label>
-                        </div>
-                        <div>
-                            <label for="rock-paper">🖐️</label>
-                            <label for="paper-paper">🖐️</label>
-                            <label for="scissors-paper">🖐️</label>
-                        </div>
-                        <div>
-                            <label for="rock-scissors">✌</label>
-                            <label for="paper-scissors">✌</label>
-                            <label for="scissors-scissors">✌</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="message">
-                <h2></h2>
-                <input type="reset" value="Refresh Round"/>
-            </div>
-
-        </form>
-    </div>
-    <div id="vision-rps">
-        <video class="input_video" style="display: none"></video>
-        <canvas class="output_canvas" width="640px" height="360px"></canvas>
-        <div id="output" style="font-size: 100px"></div>
+<header>
+</header>
+<section class="game">
+    <div class="score">
+        <div class="player-score">
+            <h2>Player</h2>
+            <p>0</p>
+        </div>
+        <div class="computer-score">
+            <h2>Computer</h2>
+            <p>0</p>
+        </div>
     </div>
 
-</div>
-<script src="js/script.js" type="module"></script>
+    <div class="intro">
+
+        <h1>Vision RPS</h1>
+        <h2>Rock Paper and Scissors</h2>
+        <h1>✊ 🖐️ ✌️</h1>
+        <button>Let's Play</button>
+    </div>
+
+    <div class="match fadeOut">
+        <h2 class="winner">Show your hand</h2>
+
+        <div class="hands">
+            <div class="player-hand" id="output">✊</div>
+            <div class="computer-hand">✊</div>
+        </div>
+        <div>
+            <video class="input_video" style="display: none"></video>
+            <canvas class="output_canvas" width="640px" height="360px"></canvas>
+            <!--            <div id="output" style="font-size: 100px"></div>-->
+        </div>
+    </div>
+</section>
+<script src="js/model.js"></script>
+<script src="js/app.js"></script>
+
 </body>
 </html>
